Fri Sep 23 06:01:30 2005  Minero Aoki  <aamine@loveruby.net>

	* test/ruby/test_file.rb: check File#chown(nil,nil).
	  [ruby-dev:27140]

Fri Sep 23 05:57:23 2005  Minero Aoki  <aamine@loveruby.net>

	* ext/ripper: refactoring code generation tools. [ruby-dev:27247]
	  [ruby-dev:27273]

	* ext/ripper/depend: use generate.rb.

	* ext/ripper/lib/ripper/core.rb: removed.

	* ext/ripper/tools/generate-eventids1.rb: removed (code moved to
	  generate.rb).

	* ext/ripper/tools/generate-ripper_rb.rb: removed (code moved to
	  generate.rb).

	* ext/ripper/tools/list-parse-event-ids.rb: removed (code moved to
	  generate.rb).

	* ext/ripper/tools/list-scan-event-ids.rb: removed (code moved to
	  generate.rb).

	* ext/ripper/lib/ripper/core.rb: removed.

	* ext/ripper: refactoring tests. [ruby-dev:27273]

	* ext/ripper/test/check-event-arity.rb: removed (code moved to
	  tools/generate.rb).

	* ext/ripper/test/check-event-coverage.rb: removed (code moved to
	  test/ripper/test_parser_events.rb).

	* ext/ripper/test/check-scanner-event-coverage.rb: removed (code
	  moved to test/ripper/test_scanner_events.rb).

	* ext/ripper/test/list-called-events.rb: removed.

	* ext/ripper/test/src_rb: removed.

	* ext/ripper/test/validate.rb: removed.

	* test/ripper/test_scanner_events.rb: check event coverage.

	* ext/ripper/lib/ripper/core.rb.in: update copyright year.

Thu Sep 22 23:40:19 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (find_executable0): default path if environment is not
	  set.  [ruby-dev:27281]

	* ext/ripper/extconf.rb (have_command): replaced with find_executable.

Thu Sep 22 17:31:48 2005  Shugo Maeda  <shugo@ruby-lang.org>

	* test/readline/test_readline.rb (TestReadline::replace_stdio):
	  merged the patch of [ruby-dev:25232] instead of [ruby-dev:25223].
	  (merged from ruby_1_8 branch)

Wed Sep 21 23:30:44 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (configuration): generalized nmake dependent code.
